[package]
name = "mcps-demo"
version = "0.8.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP-S single-node demo harness: the host-side HostSession demo client (the model never holds keys)."

# MCPS-046 (MCPS-EPIC-P6.5): the demo client drives the EXISTING mcps-host
# HostSession to sign requests and verify the bound responses. It depends only on
# sibling in-workspace crates (mcps-host, mcps-core) plus serde_json for building
# request params — no crate outside the workspace, no async runtime. Transport
# stays in this crate; mcps-host remains networking-free (ADR-MCPS-015).
[dependencies]
# The deterministic demo BINARIES (src/bin/demo_positive.rs, demo_negative.rs,
# demo_mtls_client.rs) and the integration tests use mcps-host's `FixedClock` /
# `SeededNonceSource` fixtures, compiled only under its `test-fixtures` feature
# (audit #81). Because the consumers are normal (non-test) bin targets, the
# feature is enabled on the NORMAL dependency here. mcps-demo is itself the
# demo/test harness crate (not a production-deployable), so this does not widen
# any production surface; the demo lib uses only SystemClock/SystemNonceSource.
mcps-host = { path = "../mcps-host", features = ["test-fixtures"] }
mcps-core = { path = "../mcps-core" }
mcps-policy = { path = "../mcps-policy" }
mcps-proxy = { path = "../mcps-proxy" }
mcps-transport = { path = "../mcps-transport" }
serde_json = { workspace = true }
thiserror = { workspace = true }
# MCPS-055 (MCPS-EPIC-P6.6): the shared demo fixtures helper mints the demo's
# security material (server/client CAs + leaves, trust.json, signing seed) with
# rcgen. It is a NORMAL (non-dev) dependency because the demo bin generates certs
# at RUNTIME for `bazel run`. rcgen stays OUT of mcps-core/mcps-host (pure /
# transport-free).
rcgen = { workspace = true }

# Integration tests build a real rustls TLS stack against the proxy, so the
# transport-layer crates are dev-dependencies of the test binaries even though
# the library itself never imports rustls directly.
[dev-dependencies]
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
mcps-test-paths = { path = "../mcps-test-paths" }

[lib]
name = "mcps_demo"
path = "src/lib.rs"
