[package]
name = "mcps-policy"
version = "0.8.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP-S delegated authorization (Phase 5): AuthorizationProfile abstraction + Reference Signed Authorization Profile. Pluggable Biscuit/UCAN/OAuth-bound profiles later."

[dependencies]
# Phase 5 (ADR-MCPS-013). Interprets the artifact behind Core's opaque
# authorization_hash. Pure — depends only on mcps-core + serde. No networking/async.
mcps-core = { path = "../mcps-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lib]
name = "mcps_policy"
path = "src/lib.rs"

[dev-dependencies]
# Used only by the gen_phase5_vectors example to mint host-signed request
# vectors. mcps-host depends only on mcps-core, so no dependency cycle.
mcps-host = { path = "../mcps-host" }

# Cargo entry point for the Phase 5 conformance-vector generator (the monorepo
# drives the same source via Bazel: //components/mcps/mcps-policy:gen_phase5_vectors).
# Run: cargo run -p mcps-policy --example gen_phase5_vectors > tests/vectors/phase5_vectors.json
[[example]]
name = "gen_phase5_vectors"
path = "conformance/gen_vectors.rs"
